--- a/webpage/style.css
+++ b/webpage/style.css
@@ -1,13 +1,11 @@
-html {
-    background-color: #39275B;
-}
-
 body {
     width: 600px;
     margin: 1em auto;
     background-color: white;
     border: 10px #D8C858 solid;
     padding: 0.5em;
+    background-color: #39275B;
+
 }
 
 hr {
@@ -24,3 +22,8 @@ input[type="submit"] {
     font-size: 2em;
     width: 100%;
 }
+
+.error {
+        color: red;
+        font-weight: bold;
+       }
